Aggiunte informazione index, cancellate pagine di prova, aggiunti titoli tab

--- a/docs/stylesheets/shape.css
+++ b/docs/stylesheets/shape.css
@@ -8,5 +8,7 @@
     --md-accent-fg-color--transparent:   #17ff871f;
     --md-accent-bg-color:                #f4f6f9;
     --md-accent-bg-color--light:         #e4e8ed2a;
-    
   }
+  a {
+    text-decoration: underline;
+}
