--- a/docs/stylesheets/shape.css
+++ b/docs/stylesheets/shape.css
@@ -15,3 +15,8 @@ p a {
 article ul li a{
   text-decoration: underline;
 }
+
+/* Maximum space for text block */
+.md-grid {
+  max-width: 100%; /* or 100%, if you want to stretch to full-width */
+}
