--- a/docs/stylesheets/shape.css
+++ b/docs/stylesheets/shape.css
@@ -20,3 +20,10 @@ article ul li a{
 .md-grid {
   max-width: 100%; /* or 100%, if you want to stretch to full-width */
 }
+
+/* Admonitions width  */
+.md-typeset .admonition,
+.md-typeset details {
+  width: 75%;
+  margin: auto;
+}
